<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.exoplatform.social</groupId>
  <artifactId>exo.social.client</artifactId>
  <version>1.0.0-alpha1-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>exo.social.client</name>
  <url>http://exoplatform.org/company/en/platform/exo-extended-services/exo-social</url>
  <inceptionYear>2011</inceptionYear>

  <organization>
    <name>eXo Platform</name>
    <url>http://www.exoplatform.org</url>
  </organization>


  <properties>
    <!-- ################ -->
    <!-- Project settings -->
    <!-- ################ -->

    <!-- java version -->
    <maven.compiler.source>1.5</maven.compiler.source>
    <maven.compiler.target>1.5</maven.compiler.target>

    <!-- encoding -->
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <!-- project dependencies versions -->
    <json_simple.version>1.1</json_simple.version>
    <junit.version>4.8.2</junit.version>
    <org.apache.httpclient.version>4.0</org.apache.httpclient.version>

    <!-- ########################## -->
    <!-- Integration tests settings -->
    <!-- ########################## -->
    <!-- social server version -->
    <social.server.version>1.2.0-GA</social.server.version>
    <!-- integration tests options -->
    <social.server.host>127.0.0.1</social.server.host>
    <social.server.port>8080</social.server.port>
    <!-- skip cargo execution to use your own server ?? -->
    <it.cargo.skip>false</it.cargo.skip>

    <!-- ################ -->
    <!-- Build properties -->
    <!-- ################ -->

    <!-- Maven plugins versions to use -->
    <cargo-maven2-plugin.version>1.1.1</cargo-maven2-plugin.version>
    <maven-failsafe-plugin.version>2.9</maven-failsafe-plugin.version>
    <maven-source-plugin.version>2.1.2</maven-source-plugin.version>
    <maven-surefire-plugin.version>2.9</maven-surefire-plugin.version>
    <maven-deploy-plugin.version>2.6</maven-deploy-plugin.version>
    <maven-dependency-plugin.version>2.2</maven-dependency-plugin.version>
    <wagon-webdav-jackrabbit.version>1.0-beta-7</wagon-webdav-jackrabbit.version>

    <!-- ***************** -->
    <!-- webdav required to safely deploy large artifacts -->
    <!-- ***************** -->
    <exo.releases.repo.url>dav:http://repository.exoplatform.org/service/local/staging/deploy/maven2/</exo.releases.repo.url>
    <exo.snapshots.repo.url>dav:http://repository.exoplatform.org/content/repositories/exo-snapshots/</exo.snapshots.repo.url>
  </properties>

  <distributionManagement>
    <repository>
      <id>repository.exoplatform.org</id>
      <url>${exo.releases.repo.url}</url>
    </repository>
    <snapshotRepository>
      <id>repository.exoplatform.org</id>
      <url>${exo.snapshots.repo.url}</url>
    </snapshotRepository>
  </distributionManagement>

  <scm>
    <connection>scm:git:git://github.com/exosocial/exo.social.client.git</connection>
    <developerConnection>scm:git:ssh://git@github.com/exosocial/exo.social.client.git</developerConnection>
    <url>https://github.com/exosocial/exo.social.client</url>
  </scm>

  <issueManagement>
    <system>GitHub</system>
    <url>https://github.com/exosocial/exo.social.client/issues/</url>
  </issueManagement>

  <dependencies>
    <dependency>
      <groupId>com.googlecode</groupId>
      <artifactId>json_simple</artifactId>
      <version>${json_simple.version}</version>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>org.apache.httpcomponents</groupId>
      <artifactId>httpclient</artifactId>
      <version>${org.apache.httpclient.version}</version>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>


  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.codehaus.cargo</groupId>
          <artifactId>cargo-maven2-plugin</artifactId>
          <version>${cargo-maven2-plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-failsafe-plugin</artifactId>
          <version>${maven-failsafe-plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <version>${maven-source-plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${maven-surefire-plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>${maven-deploy-plugin.version}</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <executions>
          <execution>
            <id>attach-sources</id>
            <phase>verify</phase>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-deploy-plugin</artifactId>
        <!-- Required by Maven 3+ to deploy artifacts in webdav -->
        <dependencies>
          <dependency>
            <groupId>org.apache.maven.wagon</groupId>
            <artifactId>wagon-webdav-jackrabbit</artifactId>
            <version>${wagon-webdav-jackrabbit.version}</version>
          </dependency>
        </dependencies>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>run-its</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-dependency-plugin</artifactId>
            <version>${maven-dependency-plugin.version}</version>
            <executions>
              <execution>
                <id>unpack</id>
                <phase>pre-integration-test</phase>
                <goals>
                  <goal>unpack</goal>
                </goals>
                <configuration>
                  <artifactItems>
                    <artifactItem>
                      <groupId>org.exoplatform.social</groupId>
                      <artifactId>exo.social.packaging.pkg</artifactId>
                      <version>${social.server.version}</version>
                      <classifier>tomcat</classifier>
                      <type>zip</type>
                      <overWrite>false</overWrite>
                      <outputDirectory>${project.build.directory}/social-server/</outputDirectory>
                    </artifactItem>
                  </artifactItems>
                </configuration>
              </execution>
            </executions>
          </plugin>
          <!-- Start/Stop the social server used for tests -->
          <plugin>
            <groupId>org.codehaus.cargo</groupId>
            <artifactId>cargo-maven2-plugin</artifactId>
            <executions>
              <execution>
                <id>start-container</id>
                <phase>pre-integration-test</phase>
                <goals>
                  <goal>start</goal>
                </goals>
              </execution>
              <execution>
                <id>stop-container</id>
                <phase>post-integration-test</phase>
                <goals>
                  <goal>stop</goal>
                </goals>
              </execution>
            </executions>
            <configuration>
              <skip>${it.cargo.skip}</skip>
              <!-- Container configuration -->
              <container>
                <containerId>tomcat6x</containerId>
                <home>${project.build.directory}/social-server/eXoSocial-${social.server.version}/</home>
                <type>installed</type>
                <timeout>240000</timeout>
                <systemProperties>
                  <java.util.logging.manager>org.apache.juli.ClassLoaderLogManager</java.util.logging.manager>
                  <java.util.logging.config.file>${project.build.directory}/social-server/eXoSocial-${social.server.version}/conf/logging.properties</java.util.logging.config.file>
                  <org.apache.commons.logging.Log>org.apache.commons.logging.impl.SimpleLog</org.apache.commons.logging.Log>
                  <java.security.auth.login.config>${project.build.directory}/social-server/eXoSocial-${social.server.version}/conf/jaas.conf</java.security.auth.login.config>
                  <exo.product.developing>false</exo.product.developing>
                  <exo.conf.dir.name>gatein/conf</exo.conf.dir.name>
                </systemProperties>
              </container>
              <!-- Configuration to use with the container -->
              <configuration>
                <type>existing</type>
                <home>${project.build.directory}/social-server/eXoSocial-${social.server.version}/</home>
                <properties>
                  <cargo.jvm.args>-Xms128m -Xmx512m -XX:MaxPermSize=256m</cargo.jvm.args>
                </properties>
              </configuration>
            </configuration>
          </plugin>
          <!-- Execute integration tests -->
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-failsafe-plugin</artifactId>
            <configuration>
              <systemPropertyVariables>
                <social.server.host>${social.server.host}</social.server.host>
                <social.server.port>${social.server.port}</social.server.port>
              </systemPropertyVariables>
            </configuration>
            <executions>
              <execution>
                <id>integration-test</id>
                <goals>
                  <goal>integration-test</goal>
                </goals>
              </execution>
              <execution>
                <id>verify</id>
                <goals>
                  <goal>verify</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

</project>
